fix rounded team images on ios

--- a/src/styles/generalStyles.css
+++ b/src/styles/generalStyles.css
@@ -401,3 +401,6 @@ html.transitioning-color-scheme * {
 .tw-forms-disable input {
   --tw-ring-color: transparent !important;
 }
+.gatsby-image-wrapper-rounded img {
+  @apply rounded-full;
+}
